--- a/ChromeExtension/css/popup.css
+++ b/ChromeExtension/css/popup.css
@@ -1,8 +1,9 @@
 .container {
     max-height: 600px;
     min-height: 300px;
-    width: 300px;
+    width: 350px;
     border-radius: 2px;
+    padding: 20px;
     background: white;
 }
 
