--- a/ChromeExtension/css/popup.css
+++ b/ChromeExtension/css/popup.css
@@ -1,7 +1,6 @@
 .container {
     max-height: 600px;
-    min-height: 300px;
-    width: 350px;
+    max-width: 500px;
     border-radius: 2px;
     padding: 20px;
     background: white;
@@ -10,4 +9,107 @@
 body {
     font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
     font-size: 100%;
+    overflow: scroll;
+}
+
+img {
+    max-width: 450px;
+    max-height: 300px;
+}
+
+#status {
+    display: none; /* default */
+    text-align: center;
+    margin-bottom: 0;
+}
+
+.link {
+    color: darkgray;
+    font-style: italic;
+    font-size: 90%;
+    margin: 0.5em 0;
+}
+
+.big {
+    font-size: 300%;
+}
+
+/* MDB Hover */
+
+#site-thumbnail-overlay {
+    cursor: pointer;
+}
+
+.view {
+    position: relative;
+    overflow: hidden;
+    cursor: default
+}
+
+.view .mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    background-attachment: fixed
+}
+
+.view img {
+    position: relative;
+    display: block
+}
+
+.overlay .mask {
+    opacity: 0;
+    -webkit-transition: all .4s ease-in-out;
+    -o-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out
+}
+
+.overlay .mask:hover {
+    opacity: 1
+}
+
+.flex-center {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 100%
+}
+
+.flex-center p {
+    margin: 0
+}
+
+.flex-center ul {
+    text-align: center
+}
+
+.flex-center ul li {
+    margin-bottom: 1rem
+}
+
+.flex-center ul li:last-of-type {
+    margin-bottom: 0
+}
+
+.rgba-stylish-light {
+    background-color: rgba(62, 69, 81, .3)
+}
+
+.rgba-stylish-strong {
+    background-color: rgba(62, 69, 81, .7)
 }
